@@ -108,12 +108,14 @@ The following example log4j2.xml is based upon the micro quickstart:
 Peons always output logs to standard output. Middle Managers redirect task logs from standard output to
 [long-term storage](index.md#log-long-term-storage).
 
-> NOTE:
-> Druid shares the log4j configuration file among all services, including task peon processes.
-> However, you must define a console appender in the logger for your peon processes.
-> If you don't define a console appender, Druid creates and configures a new console appender
-> that retains the log level, such as `info` or `warn`, but does not retain any other appender
-> configuration, including non-console ones.
+:::info
+ NOTE:
+ Druid shares the log4j configuration file among all services, including task peon processes.
+ However, you must define a console appender in the logger for your peon processes.
+ If you don't define a console appender, Druid creates and configures a new console appender
+ that retains the log level, such as `info` or `warn`, but does not retain any other appender
+ configuration, including non-console ones.
+:::
 
 ## Log directory
 The included log4j2.xml configuration for Druid and ZooKeeper writes logs to the `log` directory at the root of the distribution.
@@ -133,19 +135,6 @@ This consists mainly of messages from the
 Java runtime itself.
 This file is not rotated, but it is generally small due to the low volume of messages.
 If necessary, you can truncate it using the Linux command `truncate --size 0 log/historical.stdout.log`.
-
-## Avoid reflective access warnings in logs
-
-On Java 11, you may see warnings like the following in the logs:
-
-```
-WARNING: An illegal reflective access operation has occurred
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-```
-
-To avoid these, add the `--add-exports` and `--add-opens` command line parameters described in the documentation section
-about [Java strong encapsulation](../operations/java.md#strong-encapsulation).
 
 ## Set the logs to asynchronously write
 
